# TextExplorer

./: .env  .gitignore  Dockerfile  GUI.py  LICENSE  Main.py  README.md  configurations.json  docker-compose.yml  nginx.conf  requirements.txt
backend/: Cargo.toml  configurations.json  diesel.toml  sqlite_database.db
backend/.cargo/: config.toml
backend/migrations/2024-07-06-082003_text_explorer/: down.sql  up.sql
backend/migrations/2024-07-07-000306_add_table_configurations/: down.sql  up.sql
backend/migrations/2024-07-09-010649_add_unique_constraint_to_id/: up.sql
backend/src/: main.rs  models.rs  schema.rs
backend/src/base_models/: basics.rs  document.rs  mod.rs
backend/src/database/: connections.rs
backend/src/utilities/: configurations.rs  mod.rs  parsers.rs  vector_database_interfaces.rs
backend/src/vectorization/: text.rs
base_models/: ServiceManagement.py  UserOperations.py
configurations/: CollectionNames.json  Configurations.json
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css
ui_controls/: MainPage.py  UIControllers.py
utilities/: Lifespan.py  QdrantVectorDatabaseOperations.py  QdrantVectorDatabaseOperationsSynchronous.py
