[package]
name = "rust_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
ort = "2.0.0-rc.2"
tokenizers = "0.19.1"
serde_json = "1.0.117"
env_logger = "0.11.3"
log = "0.4.21"
actix-web = "4.8.0"
text-splitter = "0.14.0"
chrono = "0.4.38"
qdrant-client = "1.10.1"
diesel = { version = "2.2.0", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
indicatif = "0.17.8"
actix-cors = "0.7.0"

[dependencies.uuid]
version = "1.9.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
